--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "groups": ["GPV12.1", "GPV18.1"],
+  "groups": ["GPV30.1"],
   "region": "kyiv",
   "yasno_region_id": "25",
   "yasno_dso_id": "902"
